create version from local file
