# backend/api/swagger/pipeline.upload.swagger.json
@@ -51,6 +51,67 @@
           "PipelineUploadService"
         ]
       }
+    },
+    "/apis/v1beta1/pipeline_versions/upload": {
+      "post": {
+        "operationId": "UploadPipelineVersion",
+        "consumes": [
+          "multipart/form-data"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/apiPipelineVersion"
+            }
+          },
+          "default": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/apiStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "uploadfile",
+            "in": "formData",
+            "required": true,
+            "type": "file",
+            "description": "The pipeline to upload. Maximum size of 32MB is supported."
+          },
+          {
+            "name": "versionName",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "pipelineId",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "pipelineName",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "codeSourceUrl",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "PipelineUploadService"
+        ]
+      }
     }
   },
   "definitions": {
